[package]
name = "solana-rpc-performance-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "solana_rpc_performance_rust"
path = "src/lib.rs"

[[bin]]
name = "laserstream_benchmark"
path = "src/bin/laserstream_benchmark.rs"

[[bin]]
name = "rpc_vs_laserstream_logger"
path = "src/bin/rpc_vs_laserstream_logger.rs"


[[bin]]
name = "rpc_latency_test"
path = "src/bin/rpc_latency_test.rs"

[[bin]]
name = "helius_proper_latency"
path = "src/bin/helius_proper_latency.rs"


[[bin]]
name = "racing_comparison"
path = "src/bin/racing_comparison.rs"

[[bin]]
name = "entry_sub"
path = "src/bin/entry_sub.rs"

[[bin]]
name = "real_shred_inspector"
path = "src/bin/real_shred_inspector.rs"

[[bin]]
name = "shred_block_correlator"
path = "src/bin/shred_block_correlator.rs"

[[bin]]
name = "shred_vs_block_speed_test"
path = "src/bin/shred_vs_block_speed_test.rs"

[[bin]]
name = "latency_calculator"
path = "src/bin/latency_calculator.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"
helius-laserstream = "0.0.9"
base64 = "0.21"
hex = "0.4"
tracing = "0.1.41"
yellowstone-grpc-proto = "9.0.0"
